--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="VID-CSS.css">
+    <meta name="viewport" content="width=device-witdh, initial-scale=1.0, user-scalable=yes">
 </head>
 <body>
     
