--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <path id="R1P1" class="cls-1-1" d="M311.7,407.57l-2-3.64a12.83,12.83,0,0,0,8-12.54l3.88-.2a17.31,17.31,0,0,1-2.92,10.55A17.12,17.12,0,0,1,311.7,407.57Z" transform="translate(-117.86 -201.4)"/></g></svg>
   
    
-   
-    <article>
+    
+    <article id="schuifTest">
     <p class="text2 schuifTransition">musica </p>
     <p class="text3 schuifTransition"> viva </p>
     
